contrib/views/hive20/src/main/resources/ui/app/styles/app.scss
/* ... */
.flash-messages-wrap {
  position: fixed;
  width: 40%;
  min-width: 575px;
  left: 50%;
  margin-left: -20%;
  z-index: 1000;
}

.flash-messages {
  border-radius: $border-radius-large;
  .alert-icon {
    float: left;
    position: relative;
    bottom: 1px;
    left: 10px;
    margin-right: 15px;
    max-height: 15px;
  }

  .alert-message-wrap {
    display: table;
    min-height: 25px;
    .alert-message {
      display: table-cell;
      vertical-align: middle;
    }
  }

}

.wrap-message {
  span {
    line-height: 1.9em;
  }
}

.jobs-status {
  border-top: 1px solid darken($base-bg, 10%);
  border-bottom: 1px solid darken($base-bg, 10%);
  .strip {
    margin-top: 20px;
  }
}

.jobs-table {
  margin-top: 10px;
}

.worksheet-container{
  width:100%;padding: 10px 0;
}

.worksheet-nav {
  padding: 0 9px;
  li{
    margin-left:5px;
    a {
      border : 1px solid #bbbbb9;
    }
    button.new-worksheet {margin-left: -5px; margin-top: 4px}
  }
}


.loader {
  padding-top: 25px;
  padding-bottom: 25px;
}

.stats-section {
  margin-top: 20px;
}

.col-stats-details {
  padding-top: 10px;
}

.dropdown-item {
  display: block;
  width: 100%;
  padding: 3px 1.5rem;
  clear: both;
  font-weight: 400;
  color: #292b2c;
  text-align: inherit;
  white-space: nowrap;
  background: 0 0;
  border: 0;
}

.dropdown-submenu {
  position: relative;
}

.dropdown-submenu .dropdown-menu {
  top: 0;
  left: 100%;
  margin-top: -1px;
}

.hand {
  cursor: pointer;
}

.udf-container {
  background-color: #d9edf7; padding: 10px;
}

.center{
  text-align: center;
}

ul.sub-menu {
  margin: 0; padding: 0;
  li.dropdown{
    list-style: none;
    a {
      display: block;
      padding: 2px 25px;
      text-decoration:none;
      border-bottom: 1px solid #DDD;
      background-color: #000;
      color:#FFF;
      margin: 0 10px;
      &:hover {
        background-color: #d9edf7;
        color:#000;
      }
    }
  }
}

ul.dropdown-menu {
  li.dropdown{
    list-style: none;
    a {
      border-bottom: 1px solid #DDD;
    }
  }
}

#explain-container {
  height: 100%;
  width: 100%;
  overflow: auto;
}

.break-word{
  word-break: break-all;
}

.visual-explain-container{
  position: relative;
}

.visual-explain-detail-container {
  width: 500px;
  position: absolute;
  top: 50px;
  right: 0;
  background-color: #FFF;
  max-height: 70vh;
  overflow-y: auto;
}

.visual-explain-detail{
  border: 1px solid #DDD;
  .close{
    margin: 10px 15px;
    z-index: 9999;
  }

  .header{
    border-bottom: 1px solid #DDD; padding: 10px 0;
    .icon{
      padding:10px;
    }
    .join-type {
      font-size: 20px; font-weight: bold
    }
  }

  .vector-info{
    border: 1px solid #DDD; padding:20px; background-color:#ED6265; color:#FFF; font-weight: bold; margin: 10px 0;
  }
  .block{
    border: 1px solid #DDD; padding:20px; margin: 10px 0;

    .block-header{
      font-size: 20px; font-weight: bold;
    }
    .block-body{
      padding: 10px 0;
    }

    .divider{
      height: 1px; border-top:1px solid #DDD; margin: 10px 0;
    }
  }

}


rect.operator__box {

  fill:rgb(255, 255, 255);
  stroke:rgb(223, 223, 223);
  stroke-width: 1;

  &:hover {
    fill: rgb(223, 240, 247);
  }

  &.operator__box--TableScan {
    fill: rgb(85, 100, 105);
  }

  &.operator__box--Fetch_Operator {
    fill: rgb(42, 179, 119);
  }
}

.operator body {
  cursor: pointer;

  font-family: Roboto;
  padding: 8px 10px;
  background-color: rgba(0,0,0,0);
}

.operator--Fetch_Operator body {
  color: rgb(255, 255, 255);
  padding: 12px;
}

.operator--Fetch_Operator .operator-body {
  font-weight: lighter;
}

.operator--TableScan body {
  color: rgb(255, 255, 255);
}

.operator-caption {
  font-size: 10px;
}

.operator-body {
  font-size: 12px;
}
.edge--hidden {
  display: none;
}
.edge {
  stroke: rgb(83, 100, 106);
  stroke-width: 2px;
  fill: none;
}

#explain-container {
  height: 100%;
  width: 100%;
  overflow: auto;
}

.explain--error, .no-results {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  min-height: 100px;
  font-size: 16px;
}

.tez-ui {
  width:100%;
  height:600px;
}

.ember-modal-dialog {
  margin-top: auto !important;
  top: 200px !important;
}

.closeTab {
  cursor: pointer;
  position:relative;
  bottom:10px;
  right:-15px;
}

.CodeMirror-scroll {
  padding-bottom: 20px;
}

.ellipsis-node {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100px;
}

.progress {
  margin-top: 15px;
}

.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
  border-bottom-right-radius: 3px;
  border-top-right-radius: 3px;
}

.middle-align {
  vertical-align: middle;
}

.table-title {
  padding: 0 15px;
}

.button-container {
  margin-top: 10px;
}

.sort-icon {
  padding-left: 5px;
}

